kubernetes/apps/actual/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: actual
  template:
    metadata:
      name: actual
      labels:
        app.kubernetes.io/name: actual
    spec:
      containers:
        - name: actual
          image: ghcr.io/actualbudget/actual:26.10.0@sha256:24645e971da6bb1a1f953d6859e307a0b29be1e8b4130a35b3220c209b5b860c
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          volumeMounts:
            - name: actual-data
              mountPath: /data
          resources:
            requests:
              cpu: 26m
              memory: 170Mi
            limits:
              memory: 170Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-data
