kubernetes/apps/actual/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 5006
  selector:
    app.kubernetes.io/name: actual
