kubernetes/apps/actual/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Actual"
  name: actual
  namespace: actual
spec:
  hostnames: ["actual.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: actual
          namespace: actual
          port: 5006
      matches:
        - path:
            type: PathPrefix
            value: /
